fixed z-index

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -94,7 +94,7 @@
     height: 76px;
     margin-top: 16px;
     margin-left: 32px;
-    z-index: 9999;
+    z-index: 999;
   }
 
   .waterRatioPanel {
@@ -144,7 +144,7 @@
     left: 112px;
     margin-left: 0;
     margin-top: 0;
-    z-index: 9999;
+    z-index: 999;
   }
 
   .waterRatioPanel {
